--- a/cursos/espanol/datascience/E2_arbol.ipynb
+++ b/cursos/espanol/datascience/E2_arbol.ipynb
@@ -10,9 +10,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c30b1f30-765d-401d-b80b-f3d36bf7773b",
+   "metadata": {},
+   "source": [
+    "Analicemos los siguientes datos del clima para saber si podremos ir a surfear:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d6310fa-e788-4b00-8249-b114ae9fbf02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "import seaborn as sns\n",
+    "from matplotlib import pyplot as plt\n",
+    "from IPython.core.display import display_html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce6033f6-6776-4228-a57d-5f639388b385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data/surf_or_not.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "74641b09-961a-4ee9-b070-eb2e7918219a",
    "metadata": {},
    "source": [
+    "Ahora crearemos un algoritmo de decision, es decir, que nos permita decidir si ir a surfear o no analizando nuestra tabla de entrenamiento de decisiones pasadas. Para ello elegiremos la columna que mejor separa los si de los no.\n",
+    "\n",
     "Intuicion: queremos disminuir la entropia (que tan mezcladas estan las clases). Para ello vamos eligiendo la columna que mejor separa los datos y la dividimos.\n",
     "\n",
     "![Entropia](img/entropia.png)"
@@ -26,30 +62,6 @@
     "# Algoritmo ID3\n",
     "\n",
     "Hay distintos algoritmos para implementar los arboles de decision. Aqui solo veremos uno de los mas simples llamado ID3. Este solo funciona para variables categoricas pero se puede extender facilmente a variables numericas y tambien a regresion."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d6310fa-e788-4b00-8249-b114ae9fbf02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from collections import Counter\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce6033f6-6776-4228-a57d-5f639388b385",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data/surf_or_not.csv')\n",
-    "df"
    ]
   },
   {
@@ -153,13 +165,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob_soleado = len(df_soleado) / len(data)\n",
+    "prob_soleado = len(df_soleado) / len(subdata)\n",
     "entropy_soleado = entropy(df_soleado, \"surf\")\n",
     "\n",
-    "prob_nublado = len(df_nublado) / len(data)\n",
+    "prob_nublado = len(df_nublado) / len(subdata)\n",
     "entropy_nublado = entropy(df_nublado, \"surf\")\n",
     "\n",
-    "prob_lluvia = len(df_lluvia) / len(data)\n",
+    "prob_lluvia = len(df_lluvia) / len(subdata)\n",
     "entropy_lluvia = entropy(df_lluvia, \"surf\")"
    ]
   },
@@ -194,13 +206,13 @@
    "source": [
     "for column in [\"temperatura\",\"olas\",\"viento\"]:\n",
     "    subdata = df[[column,\"surf\"]]\n",
-    "    items_in_column = Counter(data[column])\n",
+    "    items_in_column = Counter(subdata[column])\n",
     "    df_per_item = []\n",
     "    html_str = \"\"\n",
     "    for item in items_in_column:\n",
     "        df_tmp = subdata[subdata[column]==item]\n",
     "        df_per_item.append(df_tmp)\n",
-    "        prob_tmp = len(df_tmp) / len(data)\n",
+    "        prob_tmp = len(df_tmp) / len(subdata)\n",
     "        entropy_tmp = entropy(df_tmp, \"surf\")\n",
     "        df_styler_tmp = df_tmp.style.set_table_attributes(\"style='display:inline'\").set_caption(f'{item} <br/>Entropia: {entropy_tmp:0.2f} <br/>Probabilidad: {prob_tmp:0.2f}')\n",
     "        html_str += df_styler_tmp._repr_html_()\n",
