Updated deeplearning course

--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -13,7 +13,7 @@
    "id": "cb282c99-1446-4578-801a-c70891049134",
    "metadata": {},
    "source": [
-    "Como vimos en el curso de ciencia de datos tenemos cajas negras que podemos entrenar mediante una tabla de entrenamiento que contiene filas con ejemplos y su respectivo resultado esperado. Estas filas son numeros que llamamos vectores. \n",
+    "Como vimos en el [Curso de ciencia de datos](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html) tenemos cajas negras que podemos entrenar mediante una tabla de entrenamiento que contiene filas con ejemplos y su respectivo resultado esperado. Estas filas son numeros que llamamos vectores. \n",
     "\n",
     "Que pasa si queremos entrenar una caja negra para que reconozca imagenes, por ejemplo queremos entrenar una caja negra para que reconozca si una imagen tiene un gato o un perro. En ese caso nuestra tabla de entrenamiento estara compuesta por filas que tienen una imagen en vez de numeros como vemos a continuacion:\n",
     "\n",
@@ -59,7 +59,7 @@
    "id": "e19fdc01-e0f8-471c-81c7-c21c599653c1",
    "metadata": {},
    "source": [
-    "Lamentablemente esta forma de convertir las imagenes a vectores no funciona muy bien para entrenar a nuestras cajas negras pero los cientificos empezaron a probar distintas formas de convertir las imagenes en vectores a partir de los cuales las cajas negras puedan aprender.\n",
+    "Lamentablemente esta forma de convertir las imagenes a vectores no funciona muy bien para entrenar a nuestras cajas negras porque los pixeles se relacionan entre si para crear bordes, ojos, patas, etc y al ponerlos por separado las cajas negras no logran captar estas relaciones pero los cientificos empezaron a probar distintas formas de convertir las imagenes en vectores a partir de los cuales las cajas negras puedan aprender.\n",
     "\n",
     "Un ejemplo de estas pruebas fue la aplicacion de filtros a las imagenes. Un filtro en particular es el de deteccion de bordes que convierte una imagen de la siguiente manera:\n",
     "\n",
@@ -75,7 +75,23 @@
     "<img src=\"img/2D_Convolution_Animation.gif\" width=\"500\" alt=\"Imagen de wikipedia\"/>\n",
     "</div>\n",
     "\n",
+    "Luego se creo otra arquitectura, Vision Transformers, que tambien permite transformar imagenes a vectores de manera muy efectiva. Esta arquitectura se basa en lo descubierto al intentar transformar texto a vectores.\n",
+    "\n",
+    "Por el momento existen estas dos arquitecturas que funcionan bien para convertir imagenes en vectores:\n",
+    "- Redes Convolucionales\n",
+    "- Redes Tranformers\n",
+    "\n",
+    "Y en cada una de estas arquitecturas existen muchas variaciones.\n",
+    "\n",
+    "Ambas arquitecturas realizan un proceso similar aunque de distinta forma y es el de encontrar formas y propiedades particulares en las imagenes para generar vectores que se podria decir que tienen una forma similar a la siguiente:\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/tabla_perros_gatos_vectores2.png\" width=\"700\"/>\n",
+    "</div>\n",
+    "\n",
     "Afortunadamente todo este proceso que llevo muchos años de prueba y error fue introducido adentro de las cajas negras y estas cajas negras mas complejas que aprenden solas a como convertir las imagenes en vectores para poder aprender se llaman cajas negras de deep learning.\n",
+    "\n",
+    "Probablemente en el futuro se sigan creando nuevas arquitecturas para convertir imagenes en vectores que sean aun mejores que las mencionadas.\n",
     "\n",
     "Si quieres profundizar mas en como esta compuesta la arquitectura interna de dichas cajas negras hay mas informacion en las unidades avanzadas de este curso pero no es necesario conocer en profundidad como funcionan para poder utilizarlas."
    ]
@@ -90,10 +106,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df818d42-2bc4-4697-add0-6bdcfea25f99",
+   "id": "550a1445-e61b-4b6b-a06a-ad6c2dfdff38",
    "metadata": {},
    "source": [
     "Dos imagenes de esta unidad fueron obtenidas de wikipedia:\n",
+    "\n",
     "- https://en.wikipedia.org/wiki/Edge_detection\n",
     "- https://en.wikipedia.org/wiki/Kernel_(image_processing)"
    ]
