--- a/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
+++ b/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
@@ -29,12 +29,36 @@
     "\n",
     "- Las dentritas son las variables de entrada\n",
     "- El cuerpo celular es una funcion de suma\n",
-    "- Si la suma es mayor a un umbral se activa el boton terminal (funcion de activacion)\n",
+    "- Si la suma es mayor a un umbral se activa el axon (funcion de activacion)\n",
     "- El axon es la variable de salida\n",
     "\n",
     "<div style=\"text-align:center\">\n",
     "<img src=\"img/neurona_matematica.png\" width=\"700\"/>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "795139da-43b9-4f9a-815f-d8ef518d4f21",
+   "metadata": {},
+   "source": [
+    "Si vemos este modelo de cerca vemos que el modelo matematico una neurona es igual a una regresion lineal o logistica dependiendo de su funcion de activacion. O sea es una caja negra que puede predecir nuevos datos a partir de una tabla de entrenamiento.\n",
+    "\n",
+    "El siguiente paso obvio es conectar varias neuronas para lograr una red neuronal:\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/red_neuronal.png\" width=\"700\"/>\n",
+    "</div>\n",
+    "\n",
+    "En esta pequeña red tenemos una sola capa oculta pero podriamos tener todas las que querramos. Cada circulo de nuestra capa oculta y de la capa de salida es un una neurona"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f6cbb69-5a99-4d50-94aa-dcb971eadf0d",
+   "metadata": {},
+   "source": [
+    "Con esta idea se penso que se iba a lograr igualar la inteligencia humana pero los resultados no eran mejores que los de las otras cajas negras que vimos en el [Curso de Ciencia de datos](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html). Esto se debe a muchos motivos pero es interesante pensar en que nosotros no tenemos sensores electronicos que manden numeros en forma de tabla a nuestro cerebro. Mayormente aprendemos a traves de la vision y de la lectura y aqui fue que con numerosas modificaciones a estas arquitecturas de redes neuronales se consiguio que puedan servir para hacer predicciones de imagenes y texto mucho mejor que cualquier otra caja negra antes conocida. En las proximas unidades veremos como se llego a esto."
    ]
   },
   {
