--- a/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
+++ b/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
@@ -16,7 +16,7 @@
     "Como es una neurona?\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"img/neurona.jpeg\" width=\"500\"/>\n",
+    "<img src=\"img/neurona.png\" width=\"500\"/>\n",
     "</div>"
    ]
   },
@@ -76,8 +76,16 @@
    "source": [
     "Referencias de las imagenes:\n",
     "\n",
-    "- Neurona: https://www.psycolab.com/wp-content/uploads/15286-2048x1126.jpg"
+    "- Neurona: https://en.wikipedia.org/wiki/Neuron#/media/File:Blausen_0657_MultipolarNeuron.png"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "819bac8e-87be-4c5e-b9c9-f283ec3c16aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
