--- a/cursos/espanol/programacion/3_if.ipynb
+++ b/cursos/espanol/programacion/3_if.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Cual sera el valor de a cuando ejecutemos esta celda?\n",
+    "#Cual sera el valor de b cuando ejecutemos esta celda?\n",
     "b = 5\n",
     "b = b + 1\n",
     "b = b + 3\n",
