--- a/cursos/espanol/programacion/A2_tuplas.ipynb
+++ b/cursos/espanol/programacion/A2_tuplas.ipynb
@@ -322,7 +322,8 @@
    "outputs": [],
    "source": [
     "# No modificar el siguiente codigo\n",
-    "# Solo ejecutarlo para saber si la funcion creada pasa todos los testsh, m = obtener_dummies([\"hombre\", \"mujer\", \"mujer\", \"hombre\", \"mujer\"])\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "h, m = obtener_dummies([\"hombre\", \"mujer\", \"mujer\", \"hombre\", \"mujer\"])\n",
     "assert h == [1,0,0,1,0] and m == [0,1,1,0,1], \"Error en el test 1\"\n",
     "h, m = obtener_dummies([\"mujer\", \"mujer\", \"mujer\", \"mujer\"])\n",
     "assert h == [0,0,0,0] and m == [1,1,1,1], \"Error en el test 2\"\n",
