--- a/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
+++ b/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
@@ -50,7 +50,7 @@
     "<img src=\"img/red_neuronal.png\" width=\"700\"/>\n",
     "</div>\n",
     "\n",
-    "En esta pequeña red tenemos una sola capa oculta pero podriamos tener todas las que querramos. Cada circulo de nuestra capa oculta y de la capa de salida es un una neurona"
+    "En esta pequeña red tenemos una sola capa oculta pero podriamos tener todas las que querramos. Cada circulo de nuestra capa oculta y de la capa de salida es un una neurona."
    ]
   },
   {
@@ -78,14 +78,6 @@
     "\n",
     "- Neurona: https://en.wikipedia.org/wiki/Neuron#/media/File:Blausen_0657_MultipolarNeuron.png"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "819bac8e-87be-4c5e-b9c9-f283ec3c16aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
