--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -10,6 +10,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd637aed-b023-450b-9d28-80a630a73d99",
+   "metadata": {},
+   "source": [
+    "Estas cajas negras de deep learning que pueden aprender a partir de imagenes y texto han sido estudiadas y puestas en practica por miles de cientificos e ingenieros en los ultimos años. Por ello hay muchas arquitecturas diferentes y diferentes modelos.\n",
+    "\n",
+    "Muchos de estos modelos han sido entrenados con imagenes y texto obtenidos de internet y puestos a disposicion de cualquier programador para que pueda descargarlos y utilizarlos sin tener que entrenarlos nuevamente. Estos modelos se llaman modelos preentrenados.\n",
+    "\n",
+    "Ya que crear y entrenar un modelo desde cero lleva muchisimo trabajo, esfuerzo y tiempo de computo, en este curso nos enfocaremos en utilizar solamente modelos preentrenados y luego ajustarlos a nuestras necesidades mediante lo que se conoce como el procedimiento de finetuning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "590d6ea0-cbb7-4bed-a666-5639797b788a",
+   "metadata": {},
+   "source": [
+    "## Modelos Convolucionales preentrenados\n",
+    "\n",
+    "Imagenet: https://www.image-net.org/index.php\n",
+    "Clases: https://deeplearning.cms.waikato.ac.nz/user-guide/class-maps/IMAGENET/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8b02a872-e59c-4e8b-9b27-4db53cbed1e6",
    "metadata": {},
    "source": [
