--- a/cursos/espanol/programacion/8_for.ipynb
+++ b/cursos/espanol/programacion/8_for.ipynb
@@ -525,10 +525,19 @@
    "source": [
     "#@title Solucion Ejercicio 6 {display-mode:\"form\"}\n",
     "\n",
+    "#Solucion 1\n",
     "def sumar_pos_pares(valores):\n",
     "    suma_total = 0\n",
     "    for i in range(0,len(valores),2):\n",
     "        suma_total = suma_total + valores[i]\n",
+    "    return suma_total\n",
+    "\n",
+    "#Solucion 2\n",
+    "def sumar_pos_pares(valores):\n",
+    "    suma_total = 0\n",
+    "    for i in range(len(valores)):\n",
+    "        if i%2 == 0:\n",
+    "            suma_total = suma_total + valores[i]\n",
     "    return suma_total"
    ]
   },
