--- a/cursos/espanol/programacion/A0_practica.ipynb
+++ b/cursos/espanol/programacion/A0_practica.ipynb
@@ -895,10 +895,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "feaf27e2-8c31-4f82-bd36-802872258498",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Felicitaciones todos los casos de prueba fueron pasados exitosamente!!'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# No modificar el siguiente codigo\n",
     "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
@@ -911,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37c32113-f9df-4c85-94a8-a90267434ddf",
    "metadata": {},
    "outputs": [],
@@ -933,7 +944,13 @@
     "\n",
     "# Solucion 3\n",
     "def padding_derecha(s):\n",
-    "    return s.ljust(10,\"X\")"
+    "    return s.ljust(10,\"X\")\n",
+    "\n",
+    "# Solucion 4\n",
+    "def padding_derecha(s):\n",
+    "    while len(s) < 10:\n",
+    "        s = s + 'X'\n",
+    "    return s"
    ]
   },
   {
