--- a/cursos/espanol/programacion/A5_clases.ipynb
+++ b/cursos/espanol/programacion/A5_clases.ipynb
@@ -17,7 +17,7 @@
    "id": "346c4dd5-eafa-4689-bfdc-6223acc56c1e",
    "metadata": {},
    "source": [
-    "Creemos ahora un tipo de variable que se llame Persona y que tenga un nombre y una edad:"
+    "Creemos ahora un tipo de variable que se llame Persona y que tenga un nombre y una edad, usaremos para ello la funcion *def \\_\\_init\\_\\_(self):* que luego veremos en detalle como funciona.:"
    ]
   },
   {
@@ -28,8 +28,9 @@
    "outputs": [],
    "source": [
     "class Persona():\n",
-    "    nombre = \"sin nombre\"\n",
-    "    altura = 0"
+    "    def __init__(self):\n",
+    "        self.nombre = \"sin nombre\"\n",
+    "        self.altura = 0"
    ]
   },
   {
@@ -113,9 +114,10 @@
    "outputs": [],
    "source": [
     "class Persona():\n",
-    "    nombre = \"sin nombre\"\n",
-    "    peso = 0\n",
-    "    altura = 0\n",
+    "    def __init__(self):\n",
+    "        self.nombre = \"sin nombre\"\n",
+    "        self.peso = 0\n",
+    "        self.altura = 0\n",
     "\n",
     "    def indice_masa_corporal(self):\n",
     "        imc = self.peso / (self.altura**2)\n",
@@ -210,9 +212,10 @@
    "outputs": [],
    "source": [
     "class Persona():\n",
-    "    nombre = \"sin nombre\"\n",
-    "    peso = 0\n",
-    "    altura = 0\n",
+    "    def __init__(self):\n",
+    "        self.nombre = \"sin nombre\"\n",
+    "        self.peso = 0\n",
+    "        self.altura = 0\n",
     "\n",
     "    def indice_masa_corporal(self):\n",
     "        imc = self.peso / (self.altura**2)\n",
@@ -258,9 +261,10 @@
     "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
     "\n",
     "class Persona():\n",
-    "    nombre = \"sin nombre\"\n",
-    "    peso = 0\n",
-    "    altura = 0\n",
+    "    def __init__(self):\n",
+    "        self.nombre = \"sin nombre\"\n",
+    "        self.peso = 0\n",
+    "        self.altura = 0\n",
     "\n",
     "    def indice_masa_corporal(self):\n",
     "        imc = self.peso / (self.altura**2)\n",
@@ -279,7 +283,7 @@
    "source": [
     "## La funcion \\_\\_init\\_\\_()\n",
     "\n",
-    "Las clases pueden tener una funcion que solo se ejecuta una vez al crear una variable de ese tipo. Veamos:"
+    "La funcion **def \\_\\_init\\_\\_(self):** que hemos visto en las anteriores clases es una funcion especial en donde se crean las variables que va a tener dicha clase y que solo se ejecuta una vez al crear una variable de ese tipo. Veamos:"
    ]
   },
   {
@@ -290,10 +294,6 @@
    "outputs": [],
    "source": [
     "class Persona():\n",
-    "    nombre = \"sin nombre\"\n",
-    "    altura = 0\n",
-    "    peso = 0\n",
-    "\n",
     "    def __init__(self, nombre, altura, peso):\n",
     "        self.nombre = nombre\n",
     "        self.altura = altura\n",
@@ -386,9 +386,6 @@
    "outputs": [],
    "source": [
     "class Tenista(Persona):\n",
-    "    victorias = 0\n",
-    "    derrotas = 0\n",
-    "\n",
     "    def __init__(self, nombre, altura, peso, victorias, derrotas):\n",
     "        super().__init__(nombre, altura, peso)\n",
     "        self.victorias = victorias\n",
