--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -27,7 +27,13 @@
    "source": [
     "## Modelos Convolucionales preentrenados\n",
     "\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/red_convolucional.png\" width=\"800\"/>\n",
+    "</div>\n",
+    "\n",
     "Imagenet: https://www.image-net.org/index.php\n",
+    "\n",
     "Clases: https://deeplearning.cms.waikato.ac.nz/user-guide/class-maps/IMAGENET/"
    ]
   },
