--- a/cursos/espanol/programacion/A4_sets.ipynb
+++ b/cursos/espanol/programacion/A4_sets.ipynb
@@ -384,7 +384,7 @@
    "source": [
     "#### Diferencia simetrica: \n",
     "\n",
-    "#l resultado son los elementos que no se encuentran en ambos\n",
+    "El resultado son los elementos que no se encuentran en ambos\n",
     "\n",
     "cojunto1 - conjunto2 UNION conjunto2 - conjunto1"
    ]
