--- a/cursos/espanol/programacion/A3_diccionarios.ipynb
+++ b/cursos/espanol/programacion/A3_diccionarios.ipynb
@@ -142,144 +142,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "545c6fb8-4598-4c73-93b8-7d49bc07ab1e",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 1:\n",
-    "\n",
-    "Crear una funcion **crear_diccionario(l1, l2)** que reciba dos parametros de tipo lista y devuelva un diccionario cuyas claves (keys) estaran dadas por los valores (values) de l1 y los values respectivos estaran dados por los valores de l2\n",
-    "\n",
-    "Aclaraciones:\n",
-    "- l1 y l2 tendran la misma cantidad de valores\n",
-    "\n",
-    "*Ejemplo de input y output:*\n",
-    "\n",
-    "*Input: l1=[\"Alicia\",\"Bob\",\"Nicole\"], l2=[33,35,31]*\n",
-    "\n",
-    "*Output: {\"Alicia\":33,\"Bob\":35,\"Nicole\":31}*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebf33c42-ed31-4b14-ad47-bf7e62c9ec50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def crear_diccionario(l1, l2):\n",
-    "    # Escribir aqui la solucion\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc385cf7-f04a-4a16-8455-136fcc75fce5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# No modificar el siguiente codigo\n",
-    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
-    "assert crear_diccionario([\"Alicia\",\"Bob\",\"Carla\"],[33,35,31]) == {\"Alicia\":33,\"Bob\":35,\"Carla\":31}, \"Error en el test 1\"\n",
-    "assert crear_diccionario([\"a\",\"b\",\"c\",\"d\"],[1,2,3,4]) == {\"a\":1,\"b\":2,\"c\":3,\"d\":4}, \"Error en el test 2\"\n",
-    "assert crear_diccionario([\"a\"],[\"z\"]) == {\"a\":\"z\"}, \"Error en el test 3\"\n",
-    "assert crear_diccionario([],[]) == {}, \"Error en el test 4\"\n",
-    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce76db61-423f-4ef8-a1c1-dd425e4ee0d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
-    "\n",
-    "# Solucion 1\n",
-    "def crear_diccionario(l1, l2):\n",
-    "    new_dict = {}\n",
-    "    for i in range(len(l1)):\n",
-    "        new_dict[l1[i]] = l2[i]\n",
-    "    return new_dict\n",
-    "\n",
-    "# Solucion 2\n",
-    "def crear_diccionario(l1, l2):\n",
-    "    new_dict = {}\n",
-    "    for k,v in zip(l1,l2):\n",
-    "        new_dict[k] = v\n",
-    "    return new_dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf33987d-ae0a-4eb8-9b58-12aa912daba9",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 2:\n",
-    "\n",
-    "Crear una funcion **key_en_diccionario(d, valor)** que reciba dos parametros, un diccionario y un valor. Devolver True si el valor existe como key en el diccionario o False en caso contrario\n",
-    "\n",
-    "\n",
-    "*Ejemplo de input y output:*\n",
-    "\n",
-    "*Input: d={\"Alicia\":33,\"Bob\":35,\"Carla\":31}, valor=\"Bob\"*\n",
-    "\n",
-    "*Output: True*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fb94c46-9cf7-43ed-b457-0924be9bb500",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def key_en_diccionario(d, valor):\n",
-    "    # Escribir aqui la solucion\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07ed4041-5577-495c-a834-7ac4639a1a3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# No modificar el siguiente codigo\n",
-    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
-    "assert key_en_diccionario({\"Alicia\":33,\"Bob\":35,\"Carla\":31},\"Bob\") == True, \"Error en el test 1\"\n",
-    "assert key_en_diccionario({\"a\":1,\"b\":2,\"c\":3,\"d\":4}, \"e\") == False, \"Error en el test 2\"\n",
-    "assert key_en_diccionario({\"a\":\"z\"},\"a\") == True, \"Error en el test 3\"\n",
-    "assert key_en_diccionario({},1) == False, \"Error en el test 4\"\n",
-    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d9e2a15-5f4e-451c-985f-c4f457d6de6a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
-    "\n",
-    "# Solucion 1\n",
-    "def key_en_diccionario(d, valor):\n",
-    "    if valor in d:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "# Solucion 2\n",
-    "def key_en_diccionario(d, valor):\n",
-    "    return valor in d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a4947b15-fc26-41bd-aa07-f1f8bcb584ad",
    "metadata": {},
    "source": [
@@ -442,6 +304,148 @@
     "# Convertir lista de listas en diccionario:\n",
     "x = [ [1,10], [2,20], [3,30] ]\n",
     "dict(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "545c6fb8-4598-4c73-93b8-7d49bc07ab1e",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1:\n",
+    "\n",
+    "Crear una funcion **crear_diccionario(l1, l2)** que reciba dos parametros de tipo lista y devuelva un diccionario cuyas claves (keys) estaran dadas por los valores (values) de l1 y los values respectivos estaran dados por los valores de l2\n",
+    "\n",
+    "Aclaraciones:\n",
+    "- l1 y l2 tendran la misma cantidad de valores\n",
+    "\n",
+    "*Ejemplo de input y output:*\n",
+    "\n",
+    "*Input: l1=[\"Alicia\",\"Bob\",\"Nicole\"], l2=[33,35,31]*\n",
+    "\n",
+    "*Output: {\"Alicia\":33,\"Bob\":35,\"Nicole\":31}*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebf33c42-ed31-4b14-ad47-bf7e62c9ec50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crear_diccionario(l1, l2):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc385cf7-f04a-4a16-8455-136fcc75fce5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert crear_diccionario([\"Alicia\",\"Bob\",\"Carla\"],[33,35,31]) == {\"Alicia\":33,\"Bob\":35,\"Carla\":31}, \"Error en el test 1\"\n",
+    "assert crear_diccionario([\"a\",\"b\",\"c\",\"d\"],[1,2,3,4]) == {\"a\":1,\"b\":2,\"c\":3,\"d\":4}, \"Error en el test 2\"\n",
+    "assert crear_diccionario([\"a\"],[\"z\"]) == {\"a\":\"z\"}, \"Error en el test 3\"\n",
+    "assert crear_diccionario([],[]) == {}, \"Error en el test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce76db61-423f-4ef8-a1c1-dd425e4ee0d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
+    "\n",
+    "# Solucion 1\n",
+    "def crear_diccionario(l1, l2):\n",
+    "    new_dict = {}\n",
+    "    for i in range(len(l1)):\n",
+    "        new_dict[l1[i]] = l2[i]\n",
+    "    return new_dict\n",
+    "\n",
+    "# Solucion 2\n",
+    "def crear_diccionario(l1, l2):\n",
+    "    new_dict = {}\n",
+    "    for k,v in zip(l1,l2):\n",
+    "        new_dict[k] = v\n",
+    "    return new_dict\n",
+    "\n",
+    "# Solucion 3\n",
+    "def crear_diccionario(l1, l2):\n",
+    "    return dict(zip(l1,l2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf33987d-ae0a-4eb8-9b58-12aa912daba9",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2:\n",
+    "\n",
+    "Crear una funcion **key_en_diccionario(d, valor)** que reciba dos parametros, un diccionario y un valor. Devolver True si el valor existe como key en el diccionario o False en caso contrario\n",
+    "\n",
+    "\n",
+    "*Ejemplo de input y output:*\n",
+    "\n",
+    "*Input: d={\"Alicia\":33,\"Bob\":35,\"Carla\":31}, valor=\"Bob\"*\n",
+    "\n",
+    "*Output: True*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fb94c46-9cf7-43ed-b457-0924be9bb500",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def key_en_diccionario(d, valor):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07ed4041-5577-495c-a834-7ac4639a1a3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert key_en_diccionario({\"Alicia\":33,\"Bob\":35,\"Carla\":31},\"Bob\") == True, \"Error en el test 1\"\n",
+    "assert key_en_diccionario({\"a\":1,\"b\":2,\"c\":3,\"d\":4}, \"e\") == False, \"Error en el test 2\"\n",
+    "assert key_en_diccionario({\"a\":\"z\"},\"a\") == True, \"Error en el test 3\"\n",
+    "assert key_en_diccionario({},1) == False, \"Error en el test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d9e2a15-5f4e-451c-985f-c4f457d6de6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
+    "\n",
+    "# Solucion 1\n",
+    "def key_en_diccionario(d, valor):\n",
+    "    if valor in d:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "# Solucion 2\n",
+    "def key_en_diccionario(d, valor):\n",
+    "    return valor in d"
    ]
   },
   {
