--- a/cursos/espanol/programacion/Ejercicios_Input_Print.ipynb
+++ b/cursos/espanol/programacion/Ejercicios_Input_Print.ipynb
@@ -18,11 +18,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "f20ef468-b3d3-4596-9ce3-709d8d9aa82c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un numero: 11\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "Hola\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def imprimir_numeros(n):\n",
+    "    lista = []\n",
+    "    for i in range(1,n+1):\n",
+    "        lista.append(i)\n",
+    "    return lista\n",
+    "\n",
+    "N = int(input(\"Ingresa un numero:\"))\n",
+    "resultado = imprimir_numeros(N)\n",
+    "print(resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
