Update input() process print()

--- a/cursos/espanol/programacion/6.1_funciones-Copy1.ipynb
+++ b/cursos/espanol/programacion/6.1_funciones-Copy1.ipynb
@@ -6,9 +6,9 @@
     "id": "_MYOl2Xi1P1Z"
    },
    "source": [
-    "# Entrada -> Proceso -> Salida\n",
+    "# Entrada -> Proceso -> Salida con Funciones\n",
     "\n",
-    "Todo programa de computacion consta de tres partes:\n",
+    "Como mencionamos en la unidad anterior todo programa de computacion consta de tres partes:\n",
     "\n",
     "1. La **entrada** que son los datos que le proveemos al programa\n",
     "2. El **procesamiento** de esos datos (el programa propiamente dicho)\n",
