--- a/cursos/espanol/programacion/6.2_funciones_ejercicios.ipynb
+++ b/cursos/espanol/programacion/6.2_funciones_ejercicios.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Es tiempo de practicar\n",
     "\n",
-    "Aqui resolveremos varios ejercicios para practicar lo aprendido"
+    "Aqui resolveremos varios ejercicios para practicar lo aprendido."
    ]
   },
   {
