--- a/cursos/espanol/programacion/5_funciones_ya_definidas.ipynb
+++ b/cursos/espanol/programacion/5_funciones_ya_definidas.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Funcion len() me devuelve el largo de un texto"
+    "### Funcion len() devuelve el largo de un texto"
    ]
   },
   {
@@ -255,7 +255,12 @@
    "source": [
     "### Ejercicio 3:\n",
     "\n",
-    "Escribir el contenido de la funcion sumar_numeros_de_textos(s1,s2) para que devuelva la suma del valor numerico de la suma:"
+    "Mostrar el valor numerico de la suma de las siguientes dos variables:\n",
+    "```\n",
+    "s1 = \"12\"\n",
+    "s2 = \"13\"\n",
+    "```\n",
+    "El resultado debe ser 25 y no 1213"
    ]
   },
   {
@@ -264,24 +269,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sumar_numeros_de_textos(s1,s2):\n",
-    "    # Escribir la solucion aqui:\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# No modificar el siguiente codigo\n",
-    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
-    "assert sumar_numeros_de_textos(\"1\",\"2\") == 3, \"Error en el Test 1\"\n",
-    "assert sumar_numeros_de_textos(\"-20\",\"30\") == 10, \"Error en el Test 2\"\n",
-    "assert sumar_numeros_de_textos(\"-2\",\"-1\") == -3, \"Error en el Test 3\"\n",
-    "assert sumar_numeros_de_textos(\"1000\",\"2000\") == 3000, \"Error en el Test 4\"\n",
-    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+    "s1 = \"12\"\n",
+    "s2 = \"13\"\n",
+    "#Escribir aqui la solucion\n",
+    "\n"
    ]
   },
   {
@@ -292,9 +283,7 @@
    "source": [
     "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
     "\n",
-    "def sumar_numeros_de_textos(s1,s2):\n",
-    "    salida = int(s1) + int(s2)\n",
-    "    return salida"
+    "int(s1) + int(s2)"
    ]
   },
   {
@@ -432,6 +421,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Funcion input() me permite solicitarle al usuario que ingrese un valor usando el teclado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Luego de ejecutar esta celda \n",
+    "# introducimos un valor y presionamos enter\n",
+    "nombre = input(\"Ingresa tu nombre:\")\n",
+    "print(\"Hola:\", nombre)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Importante:** La funcion **input()** siempre nos da un texto por lo que si lo que queremos que ingrese el usuario es un numero deberemos utilizar la funcion **int()** o la funcion **float()**. Veamos un ejemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edad = int(input(\"Ingresa tu edad:\"))\n",
+    "edad = edad + 1\n",
+    "print(\"En tu proximo cumpleaños tendras:\", edad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Ejercicio 5:\n",
+    "\n",
+    "Usar la funcion input() para solicitarle al usuario que ingrese dos valores y luego utilizar la funcion print() para mostrar la suma.\n",
+    "\n",
+    "Ayuda: recuerda utilizar la funcion **int()** para convertir el valor ingresado por teclado de texto a numero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 5 {display-mode:\"form\"}\n",
+    "\n",
+    "n1 = int(input(\"Ingresa el primer numero:\"))\n",
+    "n2 = int(input(\"Ingresa el segundo numero:\"))\n",
+    "suma = n1 + n2\n",
+    "print(\"La suma es:\", suma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Como recordar las funciones ya definidas\n",
     "\n",
     "Sera imposible acordarnos de memoria todas las funciones que existen ya definidas por lo que es recomendado utilizar internet si queremos recordar como funcionan o si queremos encontrar nuevas funciones. Los sitios recomendados para buscar son:\n",
@@ -452,9 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EqUiLaTeRo\n"
+     ]
+    }
+   ],
    "source": [
     "texto1 = \"EqUiLaTeRo\"\n",
     "print(texto1)"
@@ -469,9 +540,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EqUiLaTeRo\n",
+      "equilatero\n"
+     ]
+    }
+   ],
    "source": [
     "texto2 = texto1.lower()\n",
     "print(texto1)\n",
@@ -487,9 +567,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EqUiLaTeRo\n",
+      "EQUILATERO\n"
+     ]
+    }
+   ],
    "source": [
     "texto2 = texto1.upper()\n",
     "print(texto1)\n",
@@ -505,9 +594,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EqUiLaTeRo\n",
+      "EqUidistante\n"
+     ]
+    }
+   ],
    "source": [
     "texto2 = texto1.replace(\"LaTeRo\",\"distante\")\n",
     "print(texto1)\n",
