Update curso programacion

--- a/cursos/espanol/programacion/A0_practica.ipynb
+++ b/cursos/espanol/programacion/A0_practica.ipynb
@@ -8,6 +8,8 @@
     "# La practica te convertira en maestr@ \n",
     "\n",
     "Esta unidad consiste solo en ejercicios. Aqui algunos tips: \n",
+    "- Hay distintas dificultades de ejercicios.\n",
+    "- Probablemente muchos ejercicios no te salgan y necesites ayudarte de internet.\n",
     "- No es necesario terminarlos todos en un dia. \n",
     "- Tomate tu tiempo.\n",
     "- Hay mas de una solucion correcta, por lo que si tu solucion es distinta a la planteada no te preocupes pero asegurate de que pase todos los casos de prueba.\n",
@@ -895,21 +897,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "feaf27e2-8c31-4f82-bd36-802872258498",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Felicitaciones todos los casos de prueba fueron pasados exitosamente!!'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# No modificar el siguiente codigo\n",
     "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
@@ -922,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "37c32113-f9df-4c85-94a8-a90267434ddf",
    "metadata": {},
    "outputs": [],
@@ -2419,6 +2410,80 @@
     "def copia(lista):\n",
     "    nueva_lista = lista.copy()\n",
     "    return nueva_lista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c2fe46d-9f08-428e-8b05-8d2a4c133ccc",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Ejercicio 38:\n",
+    "\n",
+    "Crear una funcion llamada **escala_normal(lista)** que reciba un parametro de tipo lista y devuelva una lista que contenga los valores en una nueva escala dada por la siguiente formula:\n",
+    "\n",
+    "x' = (x - mean(lista)) / (std(lista))\n",
+    "\n",
+    "Utilizar las funciones mean y std de la libreria numpy\n",
+    "\n",
+    "*Ejemplo:*\n",
+    "\n",
+    "*Input: lista=[0,2,5,7,10]* \n",
+    "\n",
+    "*Output: [0,0.2,0.5,0.7,1]*\n",
+    "\n",
+    "Ayuda: Utilizar las funciones mean() y std() de la libreria numpy. Buscar en internet (google o chatgpt como importar y usar dicha libreria)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01adc70d-c0f7-425f-b73c-1b0e7ad3ff4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def escala_normal(lista):\n",
+    "    # Escribir aqui la solucion\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1388c5bd-1693-4125-95ef-fcfb3517831f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert escala_normal([0,2,5,7,10]) == [-1.3543983551594407, -0.7900657071763404, 0.05643326479831009, 0.6207659127814105, 1.467264884756061], \"Error en el test 1\"\n",
+    "assert escala_normal([-1, 2,-0.5,6,0,10,1,18]) == [-0.875311753061199, -0.3923811306826065, -0.7948233159981003, 0.25152636582218363, -0.7143348789350016, 0.8954338623269738, -0.553358004808804, 2.183248855336554], \"Error en el test 2\"\n",
+    "assert escala_normal([1000,3000,5000]) == [-1.2247448713915892, 0.0, 1.2247448713915892], \"Error en el test 3\"\n",
+    "assert escala_normal([1000,500,0,-1000]) == [1.1832159566199232, 0.50709255283711, -0.1690308509457033, -1.52127765851133], \"Error en el test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a48d3388-9ca9-4531-afcf-f6f0a70a6fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 38 {display-mode:\"form\"}\n",
+    "\n",
+    "import numpy as np\n",
+    "def escala_normal(lista):\n",
+    "    ret = []\n",
+    "    mu = np.mean(lista)\n",
+    "    sigma = np.std(lista)\n",
+    "    for x in lista:\n",
+    "        new_x = (x - mu) / (sigma)\n",
+    "        ret.append(new_x)\n",
+    "    return ret"
    ]
   },
   {
