--- a/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb
+++ b/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "4701b36c-873d-4076-a078-fb5c3f4d1bad",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
