Updated deeplearning pretrained models

--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -5,7 +5,17 @@
    "id": "355a45d0-f340-4a55-8249-0a86a4f06bec",
    "metadata": {},
    "source": [
-    "# Fine Tuning"
+    "# Fine Tuning\n",
+    "\n",
+    "El fine tuning de una red neuronal consiste en ajustar sus la salida de la red y sus parametros ya preentrenados con una base de datos mas pequeña y especifica que la utilizada para el entrenamiento de base."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ec21a74-0503-428d-994c-d345c5eb3e6b",
+   "metadata": {},
+   "source": [
+    "## Fine Tuning de Modelos Convolucionales con Pytorch\n"
    ]
   },
   {
@@ -13,16 +23,8 @@
    "id": "8b02a872-e59c-4e8b-9b27-4db53cbed1e6",
    "metadata": {},
    "source": [
-    "Librerias open source:\n",
-    "- pytorch\n",
-    "- tensorflow\n",
-    "- keras\n",
-    "- huggingface\n",
-    "\n",
-    "En la nube privadas pagas:\n",
-    "- amazon\n",
-    "- chatgpt\n",
-    "- microsoft"
+    "## Fine Tuning de Modelos Transformers con Huggingface\n",
+    "\n"
    ]
   },
   {
