--- a/cursos/espanol/deeplearning/HF_ViT.ipynb
+++ b/cursos/espanol/deeplearning/HF_ViT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -12,14 +12,12 @@
    },
    "outputs": [],
    "source": [
-    "#!pip install transformers --quiet\n",
-    "#!pip install torch --quiet\n",
-    "#!pip install tensorflow --quiet"
+    "#!pip install transformers --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "Qah2lxaw51a3"
    },
@@ -30,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -74,16 +72,7 @@
     "id": "prMl8iEw7em7",
     "outputId": "aa4819ca-1db1-4d81-e1e7-26d1e8f9963f"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to google/vit-base-patch16-224 and revision 5dca96d (https://huggingface.co/google/vit-base-patch16-224).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#https://deeplearning.cms.waikato.ac.nz/user-guide/class-maps/IMAGENET/\n",
     "classifier = pipeline(\"image-classification\")"
@@ -91,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -99,18 +88,7 @@
     "id": "ZAwq0hgpZ4cb",
     "outputId": "defedf9e-0d69-4038-d0c2-04a641f82295"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'score': 0.48814740777015686, 'label': 'beagle'}]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = 'https://t1.ea.ltmcdn.com/es/posts/5/6/2/10_caracteristicas_de_los_perros_24265_600_square.jpg'\n",
     "classifier(images=url, top_k=1)"
@@ -118,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -126,18 +104,7 @@
     "id": "qX2vvGYWcJ_T",
     "outputId": "6bcbf543-3458-4800-b839-a4454f0974f8"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'score': 0.8308597803115845, 'label': 'comic book'}]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = \"https://i.blogs.es/742e4d/como-obtener-al-pikachu-de-ash-en-pokemon-sword-shield-para-nintendo-switch-en-mexico-y-latam-1/840_560.jpeg\"\n",
     "classifier(images=url, top_k=1)"
@@ -145,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -196,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -204,18 +171,7 @@
     "id": "8mNyrcJWbcND",
     "outputId": "2a6e1340-1a1a-4c60-9fae-ce0acc4dab69"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'score': 0.9972200393676758, 'label': 'pikachu'}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = \"https://i.blogs.es/742e4d/como-obtener-al-pikachu-de-ash-en-pokemon-sword-shield-para-nintendo-switch-en-mexico-y-latam-1/840_560.jpeg\"\n",
     "classifier(images=url, top_k=1)"
