Updated deeplearning finetuning

--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -57,7 +57,7 @@
     "<img src=\"img/hf_vision.png\" width=\"600\"/>\n",
     "</div>\n",
     "\n",
-    "Veamos como utiliza uno de estos modelos, intentemos adivinar que raza de perro es la de la siguiente imagen:\n",
+    "Veamos como utiliza uno de estos modelos, intentemos adivinar que raza de perro es la de la siguiente imagen: https://t1.ea.ltmcdn.com/es/posts/5/6/2/10_caracteristicas_de_los_perros_24265_600_square.jpg\n",
     "\n",
     "<div style=\"text-align:center\">\n",
     "<img src=\"https://t1.ea.ltmcdn.com/es/posts/5/6/2/10_caracteristicas_de_los_perros_24265_600_square.jpg\" width=\"200\"/>\n",
